Feat:Charts for trading journal data.

--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "homepage": "https://TechEdzprogrammer.github.io/tradingjournal/",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
   },
